# walk-the-dog

./: Cargo.toml  README.md  package-lock.json  package.json  rustfmt.toml  webpack.config.js
src/: browser.rs  engine.rs  game.rs  lib.rs  segments.rs  sound.rs
static/: index.html  styles.css
